# universal-form

./: .gitignore  BRIEF.md  LICENSE  Makefile  README.md  pyproject.toml
kinematics/: __init__.py  arm.py  form.py  se3.py
scripts/: ik_check.py  reach_check.py
sim/: form_sim.py
