[project]
name = "universal-form"
version = "0.0.0"
description = "What shape should a robot be — the simplest kinematic system that solves general manipulation."
requires-python = ">=3.12"
# Reasoning-first: no code yet. Dependencies land with the first slice —
# numpy for the kinematic model + closed-form IK, then mujoco for the whole-body sim.
dependencies = []

[project.optional-dependencies]
# The reachability / whole-body contact sim (arrives with sim/).
sim = ["numpy>=1.26", "mujoco>=3"]

[tool.uv]
package = false
