[project]
name = "universal-form"
version = "0.0.0"
description = "What shape should a robot be — the simplest kinematic system that solves general manipulation."
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",   # the kinematic chain + closed-form IK (kinematics/)
]

[project.optional-dependencies]
# The whole-body contact-rich sim (arrives with sim/).
sim = ["mujoco>=3"]

[tool.uv]
package = false
