[project]
name = "universal-form"
version = "0.0.0"
description = "What shape should a robot be — the simplest kinematic system that solves general manipulation."
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",   # the kinematic chain + closed-form IK (kinematics/)
]

[project.optional-dependencies]
# The interactive MuJoCo sim (sim/form_sim.py). imageio writes the demo gif; matplotlib is
# optional (the tracking plot is skipped if it's absent).
sim = ["mujoco>=3", "imageio>=2", "matplotlib>=3"]

[tool.uv]
package = false
